gitops/policy-template/block-cert-manager-cluster.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: certmanagerclusterissuerblock
spec:
  crd:
    spec:
      names:
        kind: CertManagerClusterIssuerBlock
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package kubernetes.admission

        violation[{"msg": msg}] {
          provided := input.review.object.metadata.annotations["cert-manager.io/cluster-issuer"]
          allowed := input.parameters.allowedClusterIssuers
          not array_contains(allowed, provided)
          msg := sprintf("Cluster Issuers '%v' is not allowed. Allowed issuers are: %v", [provided, allowed])
        }

        array_contains(arr, item) {
          arr[_] == item
        }
