gitops/policy-template/block-servicemonitor-honor.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: servicemonitorhonorlabels
spec:
  crd:
    spec:
      names:
        kind: ServiceMonitorHonorLabels
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package kubernetes.admission

        violation[{"msg": msg, "details": {"rejected_field": "honor_labels"}}] {
          input.review.object.spec.endpoints[_].honorLabels
          msg := sprintf("use of 'honor_labels' is not allowed in ServiceMonitor: %v", [input.review.object.metadata.name])
        }
