gitops/policy-template/block-storage-class.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sallowedstorageclasses
spec:
  crd:
    spec:
      names:
        kind: K8sAllowedStorageClasses
      validation:
        openAPIV3Schema:
          type: object
          description: >-
            Requires storage classes to be specified when used.
          properties:
            allowedStorageClasses:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sallowedstorageclasses

        violation[{"msg": msg, "details": {"allowed": allowed}}] {
          input.review.object.kind == "PersistentVolumeClaim"
          provided := input.review.object.spec.storageClassName
          allowed := input.parameters.allowedStorageClasses
          not provided == allowed[_]
          msg := sprintf("Storage class '%v' is not allowed. Allowed storage classes are: %v", [provided, allowed])
        }
